--- a/schedule/ha/bv/migration/migration_offline_sles_ha.yaml
+++ b/schedule/ha/bv/migration/migration_offline_sles_ha.yaml
@@ -26,7 +26,7 @@ schedule:
   - migration/version_switch_origin_system
   - '{{bootloader_zkvm}}'
   - boot/boot_to_desktop
-  - ha/stop_pacemaker
+  - ha/prepare_shutdown
   - update/patch_sle
   - migration/record_disk_info
   - migration/reboot_to_upgrade
